# arch-basics

./: README.md  main.py  pyproject.toml
app/: models.py
app/api/: product_router.py
app/core/: product_service.py
app/db/: database.py  product_repository.py
